--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "babel-core": "5.8.38",
     "babel-loader": "5.4.0",
     "babel-runtime": "5.8.38",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "1.0.1",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.3",
     "strip-loader": "0.1.2",
     "webpack": "1.12.15",
     "webpack-dev-server": "1.10.1",
