--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "async": "1.5.2",
     "babel": "5.8.38",
-    "css-loader": "0.18.0",
+    "css-loader": "0.19.0",
     "debug": "2.2.0",
     "dotenv": "^4.0.0",
     "expose-loader": "0.7.0",
@@ -28,6 +28,7 @@
     "intl-locales-supported": "1.0.0",
     "marked": "^0.3.5",
     "moment": "^2.13.0",
+    "rc-progress": "2.2.1",
     "react": "0.13.3",
     "react-ga": "1.2.0",
     "react-intl": "1.2.2",
