--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "0.13.3",
     "react-ga": "1.2.0",
     "react-intl": "1.2.2",
+    "react-places-autocomplete": "^5.4.3",
     "react-router": "0.13.3",
     "sass-loader": "2.0.1",
     "serialize-javascript": "1.2.0",
